fix footer bottom alignment

--- a/src/assets/styles/_footer.scss
+++ b/src/assets/styles/_footer.scss
@@ -70,6 +70,7 @@
 
   &__copyright {
     margin-top: 20px;
+    display:flex;
   }
 }
 
@@ -124,11 +125,10 @@
   }
 
   .footer-bottom {
-    display: grid;
-    grid-template-areas: "middle middle cp";
-    justify-items: flex-end;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     width: calc(100% - 20px);
-    padding-left: 10px;
 
     &__copyright {
       margin: 0;
@@ -136,16 +136,13 @@
   }
 
   .footer-bottom-middle {
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 0;
-    grid-gap: 60px;
-    grid-area: middle;
-    justify-items: start;
+    display: flex;
+    grid-gap: 20px;
+    margin-left: 115px;
   }
 
-  .footer-copyright-wrapper {
-    grid-area: cp;
-  }
+  // .footer-copyright-wrapper {
+  // }
 
   .arrow-container {
     display: flex;
