--- a/src/assets/styles/_work-header.scss
+++ b/src/assets/styles/_work-header.scss
@@ -20,7 +20,7 @@
     left: 20px;
   }
 
-  button {
+  &__button {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 15px;
@@ -45,9 +45,10 @@
   transform: translateY(0);
 }
 
-/* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
 @media (min-width: 600px) {
+/* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
   .work-header {
+    
     &__img-container {
       height: 600px;
       margin-bottom: 50px;
